Font size, spacing, and overflow fixes.

--- a/css/title.css
+++ b/css/title.css
@@ -12,7 +12,6 @@
 .block .title-labels h3 {
 	font-family: Helvetica, Arial, sans-serif;
 	font-weight: normal;
-	font-size: 85% !important;
 	margin-top: 0.5em !important;
 	padding-left: 0.2em;
 	color: #505050;
