--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@
 
 #mainContent {
 	margin-top: 45px;
+	overflow: auto;
 }
 
 #headerNav ul {
@@ -211,7 +212,7 @@ display: block; float: right; width: 227px; margin: 0; padding: 10px 0 11px 10px
 
 
 
-#mainContent .block { clear: both; margin-bottom: 35px; padding-left: 1%; }
+#mainContent .block { clear: both; margin-bottom: 35px; padding-left: 1%; overflow: auto; }
 #mainContent .feature { border-bottom:  1px solid #ddd; padding-bottom:  30px; margin-bottom: 25px; }
 
 #mainContent #contentPrimary .block { margin-bottom: 33px; }
@@ -232,7 +233,7 @@ display: block; float: right; width: 227px; margin: 0; padding: 10px 0 11px 10px
 
 #title { border-bottom: 1px solid #e0e0e0; margin-top: 0; margin-bottom: 25px; margin-right: -5px;}
 #title h1 { margin-top: 1.5em; }
-#title h2, .title h1 { padding: 0 0 0.45em 0; font-size: 43px; margin: 0 !important; line-height: 1em;}
+#title h2, .title h1 { padding: 0 0 0 0; font-size: 43px; margin: 0 !important; line-height: 1em;}
 #title h2.tagline { /*  color: #92534e;*/ color: #b82e00;}
 #title h3.category { font-size: 90% !important; display: block; padding-top: 0; margin: 0; }
 #title h1.splash-title { padding-bottom: 0px; color: #777; font-size: 300%; }
